Attempts to fix vertical alignment

--- a/pie/category/css/main.css
+++ b/pie/category/css/main.css
@@ -49,9 +49,10 @@ button[disabled] {
 */
 
 main div {
+  align-items: start;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   display: grid;
-  padding: 20px 20px 0 20px;
+  padding: 20px;
   text-align: center;
 }
 
@@ -82,16 +83,18 @@ h1 {
 }
 
 h2 {
+  align-self: start;
   font-family: 'Roboto', sans-serif;
   font-size: 14px;
   font-weight: 400;
-  margin: 0;
+  margin: 0 0 10px 0;
   padding: 0;
 }
 
 main img {
+  border: 1px solid #ddd;
   margin: 0 0 20px 0;
-  width: 100%;
+  max-width: 100%;
 }
 
 input#search {
@@ -121,7 +124,7 @@ main {
   background-color: white;
   display: grid;
   grid-gap: 25px 30px;
-  grid-template-columns: auto auto auto;
+  grid-template-columns: 1fr 1fr 1fr;
   margin: 0 0 30px 0;
   padding: 0 30px;
 }
@@ -135,14 +138,18 @@ p {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   font-weight: 300;
+  margin: 0;
+  padding: 0;
 }
 
 main p {
   color: #457FE2;
+  align-self: end;
 }
 
 footer p {
   color: #ccc;
+  margin: 20px 0;
 }
 
 section {
